--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^1.0.0",
     "@material-ui/icons": "^1.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2105": "0.0.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "express": "^4.16.3",
+    "mongoose": "^5.1.2",
+    "nodemon": "^1.17.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^3.2.1",
