--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^3.2.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "styled-components": "^3.2.6",
     "typeface-roboto": "0.0.54"
